Add jdk.internal.misc.Unsafe
Signed-off-by: Paolo Di Tommaso <paolo.ditommaso@gmail.com>